npm i inquirer js

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@inquirer/prompts": "^3.2.0",
+    "@inquirer/rawlist": "^1.2.13",
     "nodemon": "^3.0.1"
   }
 }
