--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@inquirer/prompts": "^3.2.0",
     "@inquirer/rawlist": "^1.2.13",
+    "@inquirer/select": "^1.3.0",
     "nodemon": "^3.0.1"
   }
 }
