--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@inquirer/prompts": "^3.2.0",
     "@inquirer/rawlist": "^1.2.13",
     "@inquirer/select": "^1.3.0",
+    "cloudinary": "^1.41.0",
     "nodemon": "^3.0.1"
   }
 }
