--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@inquirer/rawlist": "^1.2.13",
     "@inquirer/select": "^1.3.0",
     "cloudinary": "^1.41.0",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
 }
